v3.0:新增元数据以及特殊文件，但未验证功能